Removed fixed with on mobile

--- a/src/ikr-about-block/editor.scss
+++ b/src/ikr-about-block/editor.scss
@@ -12,3 +12,10 @@
     line-height: 35px;
     font-family: 'Bio Sans';
 }
+
+@media(max-width: 515px) {
+    .about__container--text {
+        padding: 2rem 2rem;
+        font-size: 16px;
+    }
+}
