--- a/src/ikr-about-block/style.scss
+++ b/src/ikr-about-block/style.scss
@@ -1,5 +1,4 @@
 .about__container {
-    width: 1020px;
     margin: 0rem auto 4rem;
     padding: 0;
     box-shadow: 0px 5px 6px #f1f1f1;
@@ -10,4 +9,17 @@
     font-size: 20px;
     font-weight: bold;
     line-height: 35px;
+}
+
+@media(min-width: 996px) {
+    .about__container {
+        width: 1020px;
+    }
+}
+
+@media(max-width: 515px) {
+    .about__container--text {
+        padding: 2rem 2rem;
+        font-size: 16px;
+    }
 }
